# diabetes

./: .claudeignore  .coverage  .env  .env.example  .gitignore  .pylintrc  559_train.xlsx  README.md  Untitled.ipynb  catch_up.ipynb  client.py  client_twin.py  dataset_generator.ipynb  db_monitor.py  experiments.ipynb  experiments2.ipynb  final_run.py  for_pycaret.pkl  graphs.ipynb  graphs.py  intermediate1.ipynb  live_test.py  load_model_and_predict.ipynb  load_model_and_predict.py  new_experiment.ipynb  new_tests.ipynb  pred_day.xlsx  pyproject.toml  requirements.txt  run.py  run_experiment.ipynb  runner.py  runner2.ipynb  runner2.py  sandbox.ipynb  sandbox.py  server.py  simglucose.ipynb  stream_data.ipynb  template.ipynb  (+1 more)
archive/: experiment.py  experiments2.ipynb  new_tests.ipynb  other.ipynb  requirements.txt  run_experiment-Copy1.ipynb  run_experiment-test_570.ipynb  run_experiment.ipynb
config/: mongo_config.py.template  server_config.py.template
dataframes/: 559_test_100_6_1.pkl  559_train_100_6_1.pkl
mobile/: main.py  ui.json
openspec/: AGENTS.md  project.md
paper/: draft.md
src/: config.py  logging_config.py  mongo.py
stats/: 559_part_of_day.omv  559_part_of_day.xlsx  563_part_of_day.omv  563_part_of_day.xlsx  570_part_of_day.omv  570_part_of_day.xlsx  575_part_of_day.omv  575_part_of_day.xlsx  588_part_of_day.omv  588_part_of_day.xlsx  591_part_of_day.omv  591_part_of_day.xlsx
tests/: cega_test.py  fixtures.py  ohio_test.py  test_config.py  test_data_pipeline.py  test_dataframe_helpers.py  test_experiment_orchestrator.py  test_logging_config.py  (+10 more)
(+74 files in other folders)
